# matrix

./: .travis.yml  CMakeLists.txt  Doxyfile  matrix.h
